@@ -3,6 +3,7 @@
     - added background color in convertion options
     - added SVG convertion tab: remove single text node and group of text node containing specifed string
     - added adding frame, text and picture effect and effect tab
+    - added sessions storage in XML files
     - create empty metadata when converting from SVG file
 
 * Wed Nov 14 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.5.1
